# EchoDrift

./: CMakeLists.txt  README.md
include/Core/: GameManager.h  InputManager.h  Types.h
include/Entities/: Echo.h  Entity.h  Ghost.h
include/Game/: Grid.h
include/Rendering/: Buffer.h  GLCommon.h  Renderer.h  Shader.h
shaders/: simple.frag  simple.vert
src/: main.cpp
src/Core/: GameManager.cpp  InputManager.cpp
src/Entities/: Echo.cpp  Ghost.cpp
src/Game/: Grid.cpp
src/Rendering/: Buffer.cpp  Renderer.cpp  Shader.cpp
